version/0.16/_sources/api/solver/_autosummary/settings/combusting_particle.rst.txt
:orphan:

.. _combusting_particle:

combusting_particle
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.combusting_particle.combusting_particle
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`combusting_particle_child <combusting_particle_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

